[package]
name = "five"
version = "0.1.0"
authors = ["karabo <komolema@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.1"
tokio = { version = "1.5.0", features = ["full"] }
tokio-amqp = "1.0.0"
futures = "0.3.14"

serde = "1.0.118"
serde_json = "1.0.61"
serde_derive = "1.0.118"

signal-hook = "0.3.8"

config = "0.11.0"

lapin ="2.0.0-alpha.3"

sqlx = { version = "0.5.1", features = ["postgres", "uuid", "chrono", "migrate", "json", "runtime-tokio-native-tls"]}
redis = "0.20.0"
r2d2_redis = "0.14.0"

strum = "0.20.0"
strum_macros = "0.20.1"

enum-map = "1.0.0"

uuid = { version = "0.8.2", features = ["serde", "v4"]}
chrono = "0.4.19"

rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket.git"}
