[package]
name = "yabonne-server"
version = "0.0.1"
edition = "2018"


[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
tokio = { version = "1.0.1", features = ["full"] }
tokio-amqp = "1.0.0"
futures = "0.3.8"

serde = "1.0.118"
serde_json = "1.0.61"
serde_derive = "1.0.118"

signal-hook = "0.3.2"

config = "0.10.1"

lapin ="2.0.0-alpha.1"

sqlx = { version = "0.5", features = ["postgres", "uuid", "chrono", "migrate", "json", "runtime-tokio-native-tls"]}
redis = "0.19.0"
r2d2_redis = "0.13.0"

strum = "0.20.0"
strum_macros = "0.20.1"

enum-map = "0.6.4"

uuid = { version = "0.8.1", features = ["serde", "v4"]}
chrono = "0.4"

rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket.git"}
